Structure export settings rows in dialog
- Add command to block context menu for UID-based export
- Fix block alias regex so that it only looks ahead for what precedes, instead of including it

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,26 @@
     width: calc(100% - 2*var(--rl-dialog-margin));
 }
 
+.roam-to-latex--menu {
+    opacity: 0.6;
+}
+
 .roam-to-latex--settings-row {
     align-items: center;
     display: flex;
-    margin: 10px 0px;
+}
+
+.roam-to-latex--settings-row > * {
+    margin: 5px;
+}
+
+#roam-to-latex-export-trigger {
+    justify-self: right;
+}
+
+#roam-to-latex-export-form {
+    margin: 10px;
+    padding: 10px;
 }
 
 /* SMALLER DISPLAYS */
