--- a/src/index.css
+++ b/src/index.css
@@ -13,17 +13,18 @@
     display: flex;
 }
 
-.roam-to-latex--settings-row > * {
+.roam-to-latex--settings-row > *,
+.roam-to-latex--settings-row > label.bp4-label {
     margin: 5px;
-}
-
-#roam-to-latex-export-trigger {
-    justify-self: right;
 }
 
 #roam-to-latex-export-form {
     margin: 10px;
     padding: 10px;
+}
+
+#roam-to-latex--overleaf-trigger {
+    margin: 10px 0px;
 }
 
 /* SMALLER DISPLAYS */
