--- a/src/index.css
+++ b/src/index.css
@@ -1,42 +1,8 @@
-.latex-roam--dialog {
-    --rl-dialog-margin: 20%;
-    align-self: baseline;
-    width: calc(100% - 2*var(--rl-dialog-margin));
+:root {
+    --rl-dialog-bg: #f7f7f7;
+    --rl-dialog-margin: 15%;
 }
 
 .latex-roam--menu {
     opacity: 0.6;
-}
-
-.latex-roam--settings-row {
-    align-items: center;
-    display: flex;
-}
-
-.latex-roam--settings-row > *,
-.latex-roam--settings-row > label.bp3-label {
-    margin: 5px;
-}
-
-#latex-roam-export-form {
-    margin: 10px;
-    padding: 10px;
-}
-
-#latex-roam--overleaf-trigger {
-    margin: 10px 0px;
-}
-
-/* SMALLER DISPLAYS */
-
-@media (max-width: 1000px){
-    .latex-roam--dialog {
-        --rl-dialog-margin: 10%;
-    }
-}
-
-@media (max-width: 700px){
-    .latex-roam--dialog {
-        --rl-dialog-margin: 5%;
-    }
 }
