--- a/src/components/ExportDialog/index.css
+++ b/src/components/ExportDialog/index.css
@@ -1,14 +1,14 @@
-.latex-roam--dialog {
+.rl--dialog {
     align-self: baseline;
     background: var(--rl-dialog-bg);
     width: calc(100% - 2*var(--rl-dialog-margin));
 }
 
-.latex-roam--dialog > .bp3-dialog-header {
+.rl--dialog > .bp3-dialog-header {
     justify-content: space-between;
 }
 
-.latex-roam--dialog > .bp3-dialog-body {
+.rl--dialog > .bp3-dialog-body {
     display: flex;
     justify-content: space-between;
     margin: 10px 20px;
@@ -82,13 +82,13 @@
 /* SMALLER DISPLAYS */
 
 @media (max-width: 1000px){
-    .latex-roam--dialog {
+    .rl--dialog {
         --rl-dialog-margin: 10%;
     }
 }
 
 @media (max-width: 700px){
-    .latex-roam--dialog {
+    .rl--dialog {
         --rl-dialog-margin: 5%;
     }
 }
