--- a/src/components/ExportDialog/index.css
+++ b/src/components/ExportDialog/index.css
@@ -1,14 +1,18 @@
 .rl--dialog {
     align-self: baseline;
     background: var(--rl-dialog-bg);
+    color: var(--rl-text-co);
     width: calc(100% - 2*var(--rl-dialog-margin));
 }
 
 .rl--dialog > .bp3-dialog-header {
+    background: var(--rl-dialog-bg);
+    border-bottom: 1px var(--rl-border-co) solid;
     justify-content: space-between;
 }
 
 .rl--dialog > .bp3-dialog-body {
+    align-items: center;
     display: flex;
     justify-content: space-between;
     margin: 10px 20px;
@@ -22,7 +26,7 @@
 
 #latex-roam-export-div,
 #latex-roam-export-div .bp3-control-group .bp3-button {
-    font-size: 0.85rem;
+    font-size: --rl-text-small;
 }
 
 .rl--settings-col .bp3-label {
@@ -54,12 +58,13 @@
 }
 
 .rl-tex-buttons--top {
-    background: #f4f4f4;
+    background: var(--rl-dialog-bg);
+    margin: 1px;
     top: 10px;
 }
 
 .rl-tex-buttons--bottom {
-    background: white;
+    background: var(--rl-box-bg);
     bottom: 10px;
 }
 
@@ -69,9 +74,12 @@
     right: 10px;
 }
 
+.rl-tex-buttons--top .bp3-button,
+.rl-tex-buttons--bottom .bp3-button {
+    border-radius: 0px;
+}
+
 #latex-roam-export-contents {
-    background: white;
-    box-shadow: none;
     height: 60vh;
 }
 
